# python-package-example

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.cfg.bkp
python_package_example/: __init__.py  example_module.py
python_package_name/: __init__.py
scripts/: example_bash_script  example_python_executable  example_python_script
tests/: test_example_module.py
