[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roo-python-package-example"
description = "A template for python packages"
authors = [{ name = "jamesowers-roo", email = "james.owers@deliveroo.co.uk" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fire",
    "numpy",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "nbqa",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
]
