[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-package-example"
version = "2022.06.1"
description = "A template for python packages"
authors = ["jamesowers-roo <james.owers@deliveroo.co.uk>"]
readme = "README.md"
homepage = "https://github.com/realpython/reader"
license = "DELIVEROO INTERNAL"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fire = "^0.4.0"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
nbqa = "^1.3.1"
pre-commit = "^2.19.0"
pylint = "^2.14.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
