[options]
# When the python package is installed, these scripts come included in a bin folder and
# will be available via the user's $PATH, i.e. they can execute them from anywhere
# N.B. I think it is not recommended to do this and support for it will be deprecated
scripts =
    scripts/example_bash_script
    scripts/example_python_script
    scripts/example_python_executable